fix title wrap and i tags appearing in wikipedia titles (#97)

--- a/css/base.css
+++ b/css/base.css
@@ -11,6 +11,11 @@
     position: absolute!important;
 }
 
+.survol-container h1 {
+    word-wrap: break-word;
+    line-height: 24px;
+}
+
 .survol-tooltiptext-youtube {
     width: 560px!important;
     height: 315px!important;
